force-app/main/default/objects/Tournament_Team__c/Tournament_Team__c.object-meta.xml
<CustomObject>
    <label>Tournament Team</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tournament Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tournament Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>