force-app/main/default/objects/Tournament_Team__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Group__c</field>
            <operation>equals</operation>
            <valueField>$Source.Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Tournament Teams</relationshipLabel>
    <relationshipName>Tournament_Teams</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>