force-app/main/default/objects/Tournament_Team__c/listViews/Teams.listView-meta.xml
<ListView>
    <fullName>Teams</fullName>
    <columns>Team__c</columns>
    <columns>Tournament__c</columns>
    <columns>Group__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Teams</label>
</ListView>